--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -6,7 +6,9 @@ of this, this version uses less memory and has once again an improved start up t
 
 I have been working quite hard to get the code documented. The emphasis for this release
 is again.. quality! I was quite happy with the stability of the 3.4.3 version but not
-with the amount of fixes needed to get there. 
+with the amount of fixes needed to get there. This release also contains documentation 
+on developing plugins and online services. Hopefully this will pay off in people in 
+actually starting to create new additions for Data Crow :-)
 
 Please note that a new version of the web module is available (version 1.2). This module
 needs to be installed on top of Data Crow in order for the web module to be available.
@@ -39,7 +41,7 @@ I would like to thank Klaus Lassleben for his German translation of the labels!
   the settings menu.
 - New languages can now be created from within the resource editor. Fields and modules
   can now also be translated from within this form.
-- German language has been added (created by Klaus Lassleben).
+- German language has been added.
   
 [Components]
 - Updated Jetty to the latest version (6.1.14)
