--- a/readme/webmodule/changelog.txt
+++ b/readme/webmodule/changelog.txt
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------------------------------
+Web Module 1.x   [Release on xx/xx/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+
+-----------------------------------------------------------------------------------------
 Web Module 1.2   [Release on 20/12/2008] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 Many fixes and improvements have been made, specifically in the security part.
