*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -20,6 +20,7 @@ Data Crow 3.4.5 [Release on 28/12/2008] [testing: high] [target: production]
 [Changed]
 - It is now mandatory to set the DATACROW_HOME system environment variable or to supply
   the -dir: parameter. 
+- You can now add new items to lists from within the item form.
 
 
 -----------------------------------------------------------------------------------------
