*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -26,10 +26,10 @@ Data Crow 3.4.5 [Release on 31/12/2008] [testing: high] [target: production]
 - Picture fields now have the ability to rotate image (see the edit menu).
 
 [Components]
-- IZPack (installer) has been updated (4.2) to the latest version. The latest version allows 
-  the users to select the correct user when installing Data Crow.
+- IZPack (installer) has been updated (4.2) to the latest version. The latest version 
+  allows the users to select the correct user when installing Data Crow.
 - Image4J has been removed.
-  
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.4 [Release on 20/12/2008] [testing: high] [target: production]
