*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.8 [Release on 08/01/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Changed]
+- Updated the default settings.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.7 [Release on 08/01/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
