--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -5,6 +5,9 @@ Data Crow 3.4.8 [Release on 08/01/2009] [testing: high] [target: production]
 [Changed]
 - Updated the default settings.
 
+[Components]
+- Downgraded FOP from Apache to version 0.94 (Libraries used for report generation).
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.7 [Release on 08/01/2009] [testing: high] [target: production]
