*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -4,9 +4,18 @@ Data Crow 3.4.8 [Release on 08/01/2009] [testing: high] [target: production]
 
 [Changed]
 - Updated the default settings.
+- The music album importer now also reads the artwork information from MP3 files 
+  (cover images).
+- Images can now also be added via the menu option 'Open From Memory'.
+
+[Fixed]
+- Reporting for PDF does not images and/or fails completely.
+- Music importer stopped processing files not containing any tags. 
 
 [Components]
-- Downgraded FOP from Apache to version 0.94 (Libraries used for report generation).
+- Downgraded Apache FOP to version 0.94 (Libraries used for report generation).
+  Downgrading was needed because of a known issue with the image handling.
+- Updated jaudiotagger to version 1.0.9.
 
 
 -----------------------------------------------------------------------------------------
