--- a/readme/webmodule/changelog.txt
+++ b/readme/webmodule/changelog.txt
@@ -1,9 +1,13 @@
 -----------------------------------------------------------------------------------------
-Web Module 1.x   [Release on xx/xx/2009] [testing: high] [target: production]
+Web Module 1.3   [Release on xx/xx/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
 - Errors after setting a column to sort on and switching to another module.
+
+[Changed]
+- All labels and buttons have been translated.
+- Removed the image upload (multiple issues).
 
 
 -----------------------------------------------------------------------------------------
