*** empty log message ***

--- a/readme/webmodule/changelog.txt
+++ b/readme/webmodule/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Web Module 1.3   [Release on xx/xx/2009] [testing: high] [target: production]
+Web Module 1.3   [Release on 24/01/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
