*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.8 Patch 1 [Release on 26/01/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Fixed the reporting for the movie module.
+- Fixed a startup error related to the languages.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.8 [Release on 25/01/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
