--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.8 Patch 2 [Release on xx/02/2009] [testing: high] [target: production]
+Data Crow 3.4.8 Patch 2 [Release on 06/02/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
