--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -12,7 +12,8 @@ Data Crow 3.4.8 Patch 2 [Release on 06/02/2009] [testing: high] [target: product
 
 [Changed]
 - Added new command line option: -nosplash. This option hides the splashscreen.
-- Added 
+- Updated German language! Thanks Linux!
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.8 Patch 1 [Release on 26/01/2009] [testing: high] [target: production]
