*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -6,7 +6,8 @@ Data Crow 3.4.8 Patch 3 [Release on 04/03/2009] [testing: high] [target: product
 - [2576366] "AWT-EventQueue-0" NullPointerException after restoring a database.
 - [2580766] Update all issue (screen locks when trying to add a new container).
 - [2582797] JTatoo errors under JDK 1.6.0_12 (modified the JTattoo distribution).
-- 
+- [2617165] NPE during IMDB movie import
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.8 Patch 2 [Release on 06/02/2009] [testing: high] [target: production]
