--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -3,21 +3,27 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
 -----------------------------------------------------------------------------------------
 
 [New]
-
+- Data Crow's web server can now be started without showing the UI. The normal parameter
+  'webserver' in combination with the new credentials parameter hides the splash screen 
+  and bypasses the login dialog. See the readme on how to apply these parameters.
 - The item form has it's own settings dialog. From here you can define tabs (such as 
   the current information and technical information), assign fields to tabs and set
   the order of the fields. The general field settings has lost the ability to set
   the field order as this was only used by the item form.
 - In the previous versions the uniqueness of an item was determined by checking the
   combination of the required fields. Now this behavior can be managed by marking fields
-  as key fields. By default, none of the fields is marked as a key field.
+  as key fields. By default, none of the fields is marked as a key field. 
+- The file importer considered a fixed set of file types. The functionality has been 
+  expanded to allow the user to define additional file types.
 
 [Changed]
--
+- The default view can now be set per module. In previous versions this was a global 
+  setting.
+- Error handling for the file importers and the attach file information has been 
+  improved.
 
 [Fixed]
 - Nullpointer exception when clicking in an empty space of the field selection dialog.
-- 
 
 
 -----------------------------------------------------------------------------------------
