--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -25,6 +25,7 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
 [Fixed]
 - Nullpointer exception when clicking in an empty space of the field selection dialog.
 - Error in the settings: long stored as integer.
+- Unused columns, due to conversions in the past, will now be removed.
 
 
 -----------------------------------------------------------------------------------------
