--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -16,6 +16,7 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
   as key fields. By default, none of the fields is marked as a key field. 
 - The file importer considered a fixed set of file types. The functionality has been 
   expanded to allow the user to define additional file types.
+- Icons are now shown in the tree view.
 
 [Changed]
 - The default view can now be set per module. In previous versions this was a global 
@@ -24,9 +25,10 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
   improved.
 
 [Fixed]
-- Nullpointer exception when clicking in an empty space of the field selection dialog.
+- NullPointerException when clicking in an empty space of the field selection dialog.
 - Error in the settings: long stored as integer.
 - Unused columns, due to conversions in the past, will now be removed.
+- NullPointerException when trying to use the Bol.com online search.
 
 
 -----------------------------------------------------------------------------------------
