--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -33,7 +33,7 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
 - NullPointerException when trying to use the Bol.com online search.
 - Tracks were duplicated after updating an audio CD imported via the 'retrieve CD information'
   tool. 
-
+- View not updated properly when switching between view types (without grouping).
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.8 Patch 3 [Release on 04/03/2009] [testing: high] [target: production]
