--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -19,12 +19,14 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
 - Icons are now shown in the tree view.
 - The alter module wizard now allows for fields to be changed as well. Upgrades are managed
   automatically.
+- You can now map a drive letter / location to a new location. Settings > Drive Mappings.
 
 [Changed]
 - The default view can now be set per module. In previous versions this was a global 
   setting.
 - Error handling for the file importers and the attach file information has been 
   improved.
+- Containers can now have an icon assigned.
 
 [Fixed]
 - NullPointerException when clicking in an empty space of the field selection dialog.
