--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -20,6 +20,7 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
 - The alter module wizard now allows for fields to be changed as well. Upgrades are managed
   automatically.
 - You can now map a drive letter / location to a new location. Settings > Drive Mappings.
+- The help now has search capabilities.
 
 [Changed]
 - The default view can now be set per module. In previous versions this was a global 
@@ -33,9 +34,10 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
 - Error in the settings: long stored as integer.
 - Unused columns, due to conversions in the past, will now be removed.
 - NullPointerException when trying to use the Bol.com online search.
-- Tracks were duplicated after updating an audio CD imported via the 'retrieve CD information'
-  tool. 
+- Tracks were duplicated after updating an audio CD imported via the 
+  'retrieve CD information' tool. 
 - View not updated properly when switching between view types (without grouping).
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.8 Patch 3 [Release on 04/03/2009] [testing: high] [target: production]
