--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
+Data Crow 3.4.9 [Release on 18/05/2009] [testing: moderate] [target: beta]
 -----------------------------------------------------------------------------------------
 
 [New]
@@ -21,6 +21,7 @@ Data Crow 3.4.9 [Release on 04/03/2009] [testing: moderate] [target: beta]
   automatically.
 - You can now map a drive letter / location to a new location. Settings > Drive Mappings.
 - The help now has search capabilities.
+- The mass update functionality now supports all search modes (!).
 
 [Changed]
 - The default view can now be set per module. In previous versions this was a global 
