--- a/homepage/changelog.txt
+++ b/homepage/changelog.txt
@@ -1,4 +1,128 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.9 [Release on 14/06/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+I'd like to thank the following contributors: Marco Artioli, Mathias Epp and 
+Tomáš Polomský.
+
+[Fixed]
+- Preventing a thread lock on startup for Linux systems related to the language selection
+  dialog. Code donated by Tomáš Polomský.
+- Experience mode was nor remembered when selecting the expert user mode.
+- The selection of field in the item form settings dialog caused the lists to resize
+  with every selection.
+- The XSL (stylesheets) were called XLS in the backup and restore interface.
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.4.9 [Release on 02/06/2009] [testing: moderate] [target: beta]
+-----------------------------------------------------------------------------------------
+
+[New]
+- Italian translation! Thanks to Marco Artioli!
+- Updated german translation! Thanks to Mathias Epp!
+- Data Crow's web server can now be started without showing the UI. The normal parameter
+  'webserver' in combination with the new credentials parameter hides the splash screen 
+  and bypasses the login dialog. See the readme on how to apply these parameters.
+- The item form has it's own settings dialog. From here you can define tabs (such as 
+  the current information and technical information), assign fields to tabs and set
+  the order of the fields. The general field settings has lost the ability to set
+  the field order as this was only used by the item form.
+- In the previous versions the uniqueness of an item was determined by checking the
+  combination of the required fields. Now this behavior can be managed by marking fields
+  as key fields. By default, none of the fields is marked as a key field. 
+- The file importer considered a fixed set of file types. The functionality has been 
+  expanded to allow the user to define additional file types.
+- Icons are now shown in the tree view.
+- The alter module wizard now allows for fields to be changed as well. Upgrades are managed
+  automatically.
+- You can now map a drive letter / location to a new location. Settings > Drive Mappings.
+- The help now has search capabilities.
+- The mass update functionality now supports all search modes.
+
+[Changed]
+- The default view can now be set per module. In previous versions this was a global 
+  setting.
+- Error handling for the file importers and the attach file information has been 
+  improved.
+- Containers can now have an icon assigned.
+
+[Fixed]
+- NullPointerException when clicking in an empty space of the field selection dialog.
+- Error in the settings: long stored as integer.
+- Unused columns, due to conversions in the past, will now be removed.
+- NullPointerException when trying to use the Bol.com online search.
+- Tracks were duplicated after updating an audio CD imported via the 
+  'retrieve CD information' tool. 
+- View not updated properly when switching between view types (without grouping).
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.4.8 Patch 3 [Release on 04/03/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- [2576366] "AWT-EventQueue-0" NullPointerException after restoring a database.
+- [2580766] Update all issue (screen locks when trying to add a new container).
+- [2582797] JTatoo errors under JDK 1.6.0_12 (modified the JTattoo distribution, third
+  party coding).
+- [2617165] NPE during IMDB movie import
+- Due to the check for Java version Data Crow does not run on Mac systems anymore.
+  The check has been changed to a warning (which will only be shown once) after 
+  which Data Crow will (try to) start normally. 
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.4.8 Patch 2 [Release on 06/02/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Bol.com book search did no longer work in combination with author information retrieval.
+- Updated images disappeared (rare occurrence).
+- Author information was not retrieved for the Barnes & Nobles online search.
+- Year not always retrieved for Imdb.com (errors).
+- Alapage did no longer retrieve detailed information.
+- Create module wizard shows a label "table name".
+
+[Changed]
+- Added new command line option: -nosplash. This option hides the splashscreen.
+- Updated German language! Thanks Linux!
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.4.8 Patch 1 [Release on 26/01/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Fixed the reporting for the movie module.
+- Fixed a startup error related to the languages.
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.4.8 [Release on 25/01/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Changed]
+- Updated the default settings.
+- The music album importer now also reads the artwork information from MP3 files 
+  (cover images).
+- Images can now also be added via the menu option 'Add From Memory'.
+- Check on startup for the Java version (Java from Sun must be used).
+
+[Fixed]
+- Reporting for PDF does not images and/or fails completely.
+- Music importer stopped processing files not containing any tags. 
+- Screen refresh errors in the module wizards; wizards are unusable.
+- Fixes on the Dutch translation.
+- Fixes on the French translation.
+- Removed hardcoded text.
+
+[Components]
+- Downgraded Apache FOP to version 0.94 (libraries used for report generation).
+  Downgrading was needed because of a known issue with the image handling.
+- Updated jaudiotagger to version 1.0.9.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.7 [Release on 08/01/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
